--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "cotala-brochure",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^7.0.2-2",
     "@rails/webpacker": "5.4.3",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "rails-ujs": "^5.2.6-2",
     "turbolinks": "^5.2.0",
